nested lists spacing fix

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -387,6 +387,13 @@ ol
 form {
   margin-bottom: 1.25rem; }
 
+ul ul,
+ul ol,
+ol ul,
+ol ol {
+  margin-bottom: 0;
+}
+
 
 
 /* Utilities
